k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aicp-api
spec:
  selector:
    app: aicp-api
  ports:
    - protocol: TCP
      port: 6002
      targetPort: 6002
